@@ -447,7 +447,7 @@
     <xsl:template match="*" mode="generate-runtrace"><xsl:param name="themeid"/>
         <xsl:if test="namespace-uri() = 'http://namespaces.plone.org/diazo'">
             <!-- For content conditions, generate code to evaluate and count matches -->
-            <xsl:for-each select="@if-content|@content|@content-children">
+            <xsl:for-each select="@if-content|@content|@content-children|@merged-condition">
                <xsl:variable name="attr" select="."/>
                <xsl:element name="xsl:message">
                  <xsl:text>&lt;runtrace</xsl:text>
@@ -464,7 +464,7 @@
                      <xsl:when test="string($attr) and contains('content,content-children', name($attr))">
                          <xsl:element name="xsl:value-of"><xsl:attribute name="select">count(<xsl:value-of select="$attr"/>)</xsl:attribute></xsl:element>
                      </xsl:when>
-                     <xsl:when test="string($attr) and contains('if-content', name($attr))">
+                     <xsl:when test="string($attr)">
                          <xsl:element name="xsl:value-of"><xsl:attribute name="select">boolean(<xsl:value-of select="$attr"/>)</xsl:attribute></xsl:element>
                      </xsl:when>
                  </xsl:choose>
