@@ -4,6 +4,10 @@ Changelog
 1.0.3 (unreleased)
 ------------------
 
+* Also evaluate merged-condition. This means a rule tag will turn red
+  when a condition on an outer rules tag doesn't match.
+  [lentinj]
+
 * use boolean(), not count() for if-content. Otherwise we
   generate expressions like "count(nodeset and other_nodeset)",
   which aren't valid.
